<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:targetApi="16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team1"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team1Score"
                android:textColor="#000000"
                android:textSize="48sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="sixRunsTeamA"
                android:text="@string/runs_6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="fourRunsTeamA"
                android:text="@string/runs_4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="oneRunTeamA"
                android:text="@string/runs_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="oneRunTeamA"
                android:text="@string/wide_ball" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/overs"
                android:textColor="#616161"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/team1overs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_A_Overs"
                android:textColor="#000000"
                android:textSize="48sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="overOneTeamA"
                android:text="@string/Overs_1" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#795548" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team2"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team2Score"
                android:textColor="#000000"
                android:textSize="48sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="sixRunsTeamB"
                android:text="@string/runs_6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="fourRunsTeamB"
                android:text="@string/runs_4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="oneRunTeamB"
                android:text="@string/runs_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="oneRunTeamB"
                android:text="@string/wide_ball" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/overs"
                android:textColor="#616161"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/team2overs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_B_Overs"
                android:textColor="#000000"
                android:textSize="48sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="overOneTeamB"
                android:text="@string/Overs_1" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="#1976D2"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="#ECEFF1" />
</RelativeLayout>